elasticsearch-head/elasticsearch-head.svc.yaml
# https://medium.com/@awkwardferny/getting-started-with-kubernetes-ingress-nginx-on-minikube-d75e58f52b6c

# USAGE: kubectl apply -f elasticsearch-head.svc.yaml
# wait a min for the service to be created
# kubectl get svc
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-head-svc
  namespace: elasticsearch-head
  labels:
    run: nginx
    k8s-app: elasticsearch-head
    version: v5.6.2
    kubernetes.io/cluster-service: "true"
    addonmanager.kubernetes.io/mode: Reconcile
    boss-part-of: efk
spec:
  # In a production setup, we recommend accessing Grafana through an external Loadbalancer
  # or through a public IP.
  # type: LoadBalancer
  # You could also use NodePort to expose the service at a randomly-generated port
  # type: NodePort
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # NOTE: How to support multiple ingress using on ingress controller
  # https://github.com/kubernetes/kubernetes/issues/17088#issuecomment-394313647
  # type: ExternalName
  # externalName: elasticsearch-head-svc.elasticsearch-head.svc.cluster.local
  ports:
  - port: 80
    targetPort: 9100
    protocol: TCP
    name: http
  selector:
    # app: elasticsearch-head
    run: nginx
